--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ feature_row2:
 
 {% include feature_row id="intro" type="center" %}
 
-{% include feature_row %}
+<!--{% include feature_row %}-->
 
 {% include feature_row id="feature_row2" type="left" %}
 
