Add egg hunt to landing page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@ feature_row:
   btn_class: "btn--primary"
   btn_label: "Learn more"
 
+feature_row1:
+  - image_path: assets/images/events/egg-hunt/egg-hunt.png
+  alt: "egg hunt poster"
+  title: "Come join us for our annual Easter Egg Hunt!"
+  excerpt: "Join us for a fun-filled day of egg hunting, games, and community bonding. Bring your family and friends!"
+  url: "/events/easter-egg-hunt/"
+  btn_class: "btn--primary"
+  btn_label: "Participate"
 
 feature_row2:
   - image_path: /assets/images/logo-contest/winner-original.png
@@ -51,6 +59,8 @@ feature_row2:
 {% include feature_row id="intro" type="center" %}
 
 <!--{% include feature_row %}-->
+
+{% include feature_row id="feature_row1" type="right" %}
 
 {% include feature_row id="feature_row2" type="left" %}
 
