--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@ feature_row:
   btn_label: "Learn more"
 
 feature_row1:
-  - image_path: assets/images/events/egg-hunt/egg-hunt.png
-    alt: "egg hunt poster"
-    title: "Come join us for our annual Easter Egg Hunt!"
-    excerpt: "Join us for a fun-filled day of egg hunting, games, and community bonding. Bring your family and friends!"
-    url: "/events/easter-egg-hunt/"
+  - image_path: assets/images/events/bulb-plant-2025/bulb-plant.png
+    alt: "bulb plant poster"
+    title: "Come join us for our annual Bulb Pant!"
+    excerpt: "Join us for a fun-filled day of bulb planting. Bring your family and friends!"
+    url: "/events/bulb-planting-2025/"
     btn_class: "btn--primary"
     btn_label: "Participate"
 
